--- a/my-frontend/resources/leiningen/new/my_frontend/package.json
+++ b/my-frontend/resources/leiningen/new/my_frontend/package.json
@@ -1,9 +1,23 @@
 {
-  "name": "{{name}}",
-  "version": "0.0.1",
-  "private": true,
-  "devDependencies": {
-    "shadow-cljs": "2.8.60"
-  },
-  "dependencies": {}
+    "name": "{{name}}",
+    "version": "0.0.1",
+    "private": true,
+    "devDependencies": {
+        "shadow-cljs": "^2.8.60"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "chart.js": "^2.9.3",
+        "create-react-class": "15.6.2",
+        "encoding-japanese": "^1.0.30",
+        "highlight.js": "^9.15.10",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.16.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.12.0",
+        "react-flip-move": "3.0.1",
+        "react-highlight.js": "1.0.7",
+        "uuid": "^3.3.3",
+        "uws": "^100.0.1"
+    }
 }
